Fix overflow scroll on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -66,7 +66,6 @@ blockquote {
 
 @media (max-width: 550px) {
   div.remark-highlight pre {
-    margin: 1rem -1rem;
     border-radius: 0;
   }
 }
